syntax = "proto3";

package buildops.revit;
option csharp_namespace = "BuildOpsPlatform.RevitDataCommon.Protos";

//================ Корневое сообщение для пачки данных =================
message RevitProjectDataMessage {
  RvtSnapshotDto snapshot            = 1;

  repeated ElementDto elements       = 2;
  repeated CategoryDto categories    = 3;
  repeated StageDto stages           = 4;
  repeated SiteDto sites             = 5;
  repeated LevelDto levels           = 6;
  repeated GridDto grids             = 7;
  repeated MaterialDto materials     = 8;
  repeated WorksetDto worksets       = 9;
  repeated ViewDto views             = 10;
  repeated DesignOptionDto design_options = 11;
  repeated ErrorDto errors           = 12;

  repeated ParameterDto parameters   = 13;

  repeated ElementParameterValueDto element_values   = 14;
  repeated ElementParameterDto      element_parameters = 15;

  repeated ElementMaterialDto element_materials = 16;
  repeated ElementViewDto     element_views     = 17;
  repeated ElementErrorDto    element_errors    = 18;
}

//===================== DTO =====================

// Snapshot
message RvtSnapshotDto {
  string id                  = 1;  // Guid
  string upload_date_unix_ms = 2;  // DateTime -> Unix ms
  string document_id         = 3;  // Guid как строка
}

// Element
message ElementDto {
  int32  element_id        = 1;
  string element_unique_id = 2;  // nullable string -> string
  string type_name         = 3;
  int32  category_id       = 4;
  int32  level_id          = 5;  // nullable int -> int32 (отсутствие = 0)
  int32  workset_id        = 6;
  int32  phase_id          = 7;
  int32  design_option_id  = 8;

  string document_snapshot_id = 9; // Guid?
}

// Category
message CategoryDto {
  int32  category_id   = 1;
  string name          = 2;
  string category_type = 3; // в твоём классе это string
}

// Stage (Phase)
message StageDto {
  int32  stage_id        = 1;
  string stage_unique_id = 2;
  string name            = 3;

  string document_snapshot_id = 4; // Guid?
  int32  category_id          = 5;
}

// Site
message SiteDto {
  int32  site_id        = 1;
  string site_unique_id = 2;
  string name           = 3;
  string latitude       = 4;
  string longitude      = 5;
  string city           = 6;
  string base_point_elevetion_value = 7;
  string base_point_east_west       = 8;
  string base_point_north_south     = 9;
  string base_point_angle           = 10;

  string document_snapshot_id = 11; // Guid?
  int32  category_id          = 12;
}

// Level
message LevelDto {
  int32  level_id        = 1;
  string level_unique_id = 2;
  string name            = 3;
  string elevation_value = 4;

  string document_snapshot_id = 5;
  int32  category_id          = 6;
}

// Grid
message GridDto {
  int32  grid_id        = 1;
  string grid_unique_id = 2;
  string name           = 3;

  string document_snapshot_id = 4;
  int32  category_id          = 5;
}

// Material
message MaterialDto {
  int32  material_id        = 1;
  string material_unique_id = 2;
  string name               = 3;

  string document_snapshot_id = 4;
  int32  category_id          = 5;
}

// Workset
message WorksetDto {
  int32  workset_id        = 1;
  string workset_unique_id = 2;
  string name              = 3;

  string document_snapshot_id = 4;
  int32  category_id          = 5;
}

// View
message ViewDto {
  int32  view_id        = 1;
  string view_unique_id = 2;
  string name           = 3;

  string document_snapshot_id = 4;
  int32  category_id          = 5;
}

// Design Option
message DesignOptionDto {
  int32  design_option_id        = 1; // был nullable int
  string design_option_unique_id = 2;
  string name                    = 3;

  string document_snapshot_id = 4;
  int32  category_id          = 5;
}

// Error
message ErrorDto {
  string error_id = 1; // Guid
  string message  = 2;

  string document_snapshot_id = 3;
}

// Parameter
message ParameterDto {
  string id = 1; // Guid

  int32  parameter_id   = 2; // nullable int
  string parameter_guid = 3; // Guid?
  string name           = 4;

  string document_snapshot_id = 5;
  int32  category_id          = 6;
}

// Element parameter value
message ElementParameterValueDto {
  int32  element_id = 1;

  string parameter_db_id = 2; // Guid
  int32  parameter_id    = 3; // nullable int
  string parameter_guid  = 4; // Guid?
  bool   is_type_parameter = 5;
  string storage_type    = 6; // string?
  string unit_type       = 7; // string?

  bool   is_shared  = 8;
  bool   is_system  = 9;
  bool   is_project = 10;

  bool   has_value = 11;
  string value     = 12;

  string rvt_snapshot_id = 13; // Guid
}

// Element ↔ Parameter link (если нужно отдельно)
message ElementParameterDto {
  int32  element_id    = 1;
  int32  parameter_id  = 2; // nullable int
  string parameter_guid = 3; // string?
}

// Element ↔ Material (m:n)
message ElementMaterialDto {
  int32 element_id  = 1;
  int32 material_id = 2;
}

// Element ↔ View (m:n)
message ElementViewDto {
  int32 element_id = 1;
  int32 view_id    = 2;
}

// Element ↔ Error (m:n)
message ElementErrorDto {
  int32  element_id = 1;
  string error_id   = 2; // Guid
}

